--- a/style.css
+++ b/style.css
@@ -48,12 +48,20 @@ h1.jumbo {
 
 @keyframes animatetop {
     from {
-        top:-300px;
-        opacity:0
+        top: -300px;
     } 
     
     to {
-        top:0;
-        opacity:1
+        top: 0;
+    }
+}
+
+@keyframes opac {
+    from {
+        opacity: 0;
+    } 
+    
+    to {
+        opacity: 1;
     }
 }
