--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1.jumbo {
 
 @keyframes animatetop {
     from {
-        top: -300px;
+        top: -240px;
     } 
     
     to {
@@ -57,11 +57,15 @@ h1.jumbo {
 }
 
 @keyframes opac {
-    from {
+    0% {
         opacity: 0;
     } 
+
+    20% {
+        opacity: 0;
+    }
     
-    to {
+    100% {
         opacity: 1;
     }
 }
